--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -3,6 +3,11 @@ on: [push]
 
 jobs:
   golangci-lint:
-    image: "golangci/golangci-lint"
+    runs-on: ubuntu-latest
+    name: run golangci-lint
     steps:
-    -
+    - name: 1111
+      uses: docker://golangci/golangci-lint
+      run: |
+        make precommit
+
