--- a/.golangci-lint.yml
+++ b/.golangci-lint.yml
@@ -5,7 +5,6 @@ linters:
   disable-all: false
   enable:
     - bodyclose
-    - deadcode
     - depguard
     - dogsled
     - dupl
@@ -26,7 +25,7 @@ linters:
     - maligned
     - misspell
     - prealloc
-    - scopelint
+    - exportloopref
     - staticcheck
     - structcheck
     - stylecheck
